--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@
     --weight-bold: 700;
     --weight-semi-bold: 600;
     --weight-regular: 400;
+
+    /* size */
+    --size-border-radius:4px;
   }
 
   /* uiversal tags */
@@ -61,3 +64,63 @@ h1 {
     margin: 4px 0;
   }
 
+  body{
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      cursor: default;
+  }
+  a{
+      text-decoration: none;
+      color:var(--color-white)
+  }
+  ul{
+      list-style: none;
+      padding-left: 0;
+
+  }
+
+
+
+/* navbar */
+#navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--color-white);
+    padding: 16px;
+    background-color: var(--color-pink);
+}
+
+.navbar__menu{
+    display: flex;
+}
+
+.navbar__menu__item{
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--size-border-radius);
+
+}
+.navbar__menu__item.active{
+    border:1px solid var(--color-white);
+
+}
+
+.navbar__menu__item.active:hover{
+    background-color:var(--color-dark-pink);
+
+
+}
+
+.navbar__logo img{
+   width: 50px;
+   height: 50px;
+   margin: 0 10px;
+}
+
+.navbar__logo{
+    font-size: var(--font-medium);
+    align-items: center;
+    display: flex;
+}
