--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
   *{
       box-sizing: border-box;
   }
+
+
   
 /* Typography */
 
@@ -79,6 +81,13 @@ h1 {
 
   }
 
+  button{
+      background-color: transparent;
+      cursor: pointer;
+      border:none;
+      outline: none;
+  }
+
 
 
 /* navbar */
@@ -104,11 +113,14 @@ h1 {
 }
 .navbar__menu__item.active{
     border:1px solid var(--color-white);
+    
 
 }
 
-.navbar__menu__item.active:hover{
+.navbar__menu__item:hover{
     background-color:var(--color-dark-pink);
+    border:1px solid var(--color-white);
+
 
 
 }
@@ -116,11 +128,39 @@ h1 {
 .navbar__logo img{
    width: 50px;
    height: 50px;
-   margin: 0 10px;
+   font-size: var(--font-medium);
+   align-items: center;
+   display: flex;
 }
 
-.navbar__logo{
-    font-size: var(--font-medium);
-    align-items: center;
-    display: flex;
+
+/* Home */
+#home{
+    background: url('images/home-background.png') center/cover no-repeat;
+    padding: 40px;
+    text-align: center;
+
+}
+
+.home__avatar{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 2px soild var(--color-white);
+}
+
+.home__title,
+.home__description{
+    color: var(--color-white);
+}
+
+
+.home__contact{
+    font-size: var(--font-regular);
+    font-weight: var(--weight-bold);
+    margin: 24px;
+    padding: 8px 12px;
+    border : 2px solid white;
+    border-radius: 4px;
+    color: var(--color-white);
 }
