--- a/style.css
+++ b/style.css
@@ -172,6 +172,10 @@ h1 {
 .section{
     padding: 50px;
     text-align: center;
+    margin: auto;
+}
+
+.section__container{
     max-width: 1200px;
     margin: auto;
 }
@@ -232,4 +236,163 @@ h1 {
 
 .job__period{
     font-size: var(--font-micro);
+
+
 }
+
+
+
+/* skill */
+
+
+#skills{
+    background-color: var(--color-yellow);
+}
+
+.skillset{
+    display: flex;
+    background-color : var(--color-light-grey);
+    color:var(--color-light-white);
+    margin: 20px 0;
+
+}
+
+.skillset__title{
+    color:var(--color-white);
+}
+
+.skillset__left{
+    flex-basis: 60%;
+    background-color : var(--color-dark-grey);
+
+}
+
+.skillset__right{
+    flex-basis: 40%;
+}
+.tools{
+    background-color: var(--color-grey);
+}
+
+.skill_description{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.skill{
+    padding: 20px 40px;
+}
+
+.skill__bar{
+    width: 100%;
+    height: 3px;
+    background-color: var(--color-grey);
+}
+
+.skill__value{
+    height: 3px;
+    background-color:var(--color-orange);
+}
+
+/* work */
+
+.work__categories{
+    margin: 40px;
+}
+.category__btn{
+    border : 1px solid var(--color-dark-grey);
+    border-radius: var(--size-border-radius);
+    font-size: var(--font-regular);
+    padding : 8px 48px;
+}
+
+.category__btn.active,
+.category__btn:hover{
+    background-color: var(--color-pink);
+    color:var(--color-white);
+}
+
+.category__btn.active .category__count,
+.category__btn:hover .category__count{
+    opacity: 1;
+    top:0;
+}
+
+.category__count{
+    background-color: var(--color-orange);
+    border-radius: 50%;
+    color:var(--color-white);
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    line-height: 24px;
+    position: relative;
+    top:-20px;
+    left: 4px;
+    opacity: 0;
+    transition: all var(--animation-duration) ease;
+}
+
+.work__projects{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+
+}
+
+.project{
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    background-color:var(--color-light-white);
+    position : relative;
+    justify-content: center;
+    align-items: center;
+}
+.project:hover .project__description {
+    opacity: 0.8;
+    transform: translateY(0px);    
+}
+
+    
+
+.project-img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.project__description{
+    position: absolute;
+    top:0;
+    left: 0;
+    background-color:black;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transition: all var(--animation-duration) ease;
+    transform: translateY(10px);
+}
+
+
+.project__description h3{
+    color:var(--color-white);
+}
+
+.project__description h3:after{
+    content: '';
+    width: 25px;
+    height: 2px;
+    background-color:var(--color-dark-white);
+    display: block;
+    position: relative;
+    left: 50%;
+    margin-left: -12px;
+    margin-top: 8px;
+}
+
+
