--- a/style.css
+++ b/style.css
@@ -136,6 +136,16 @@ h1 {
    display: flex;
 }
 
+.navbar__toggle{
+    position: absolute;
+    right: 32px;
+    font-size: 24px;
+    color:var(--color-white);
+    top:38px;
+    display: none;
+}
+
+
 
 /* Home */
 #home{
@@ -396,3 +406,107 @@ h1 {
 }
 
 
+/* tesimonilas */
+
+#testimonials{
+    background-color:var(--color-light-white);
+    padding: 40px;
+}
+.testimonials{
+    margin: 40px;
+}
+
+.testimonial{
+    display: flex;
+    margin: 32px 0;
+}
+
+.testimonial__avatar{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.testimonial__avatar:nth-child(odd){
+    margin-right: 40px;
+}
+.testimonial__avatar:nth-child(even){
+    margin-left: 40px;
+}
+
+
+
+.testimonial__speech-bubble{
+    padding: 18px;
+    background-color:var(--color-white);
+    border-radius: var(--size-border-radius);
+
+}
+
+.testimonial__speech-bubble p{
+    color: var(--color-light-grey);
+}
+.testimonial__speech-bubble a{
+    color:var(--color-pink)
+}
+
+
+/* contact */
+
+#contact{
+    background-color: var(--color-pink);
+
+}
+
+.contact__tilte,
+.contact__email,
+.contact__rights{
+    color: var(--color-white);
+}
+
+.contact__links{
+    font-size: var(--font-large);
+    margin: 24px 0;
+    transition: all var(--animation-duration) ease;
+}
+.contact__links i:hover {
+    transform: scale(1.1);
+    color:var(--color-orange)
+}
+
+
+/* for below 768px screen width */
+@media screen and (max-width : 768px){
+    .navbar__toggle{
+        display: block;
+    }
+
+    #navbar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar__menu{
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+    .about__majors{
+        flex-direction: column;
+    }
+    .major{
+        margin-bottom: 38px;
+    }
+    .skillset{
+        flex-direction: column;
+    }
+    .project{
+        flex-grow: 1;
+    }
+    
+    .testimonial__avatar{
+        width: 80px;
+        height: 80px;
+    }
+}
