--- a/style.css
+++ b/style.css
@@ -104,12 +104,14 @@ h1 {
     position: fixed;
     width: 100%;
     transition: all val(--animation-duration) ease-in-out;
+    z-index: 1;
 }
 
 #navbar.navbar--dark{
 
     background-color: var(--color-pink);
     padding: 8px;
+
 
 }
 
