--- a/style.css
+++ b/style.css
@@ -362,8 +362,15 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    opacity: 1;
+    transition: all var(--animation-duration) ease-in;
 
 
+}
+
+.work__projects.ani-nout{
+    opacity: 0.6;
+    transform: scale(0.96) translateY(20px);
 }
 
 .project{
@@ -378,6 +385,10 @@ h1 {
 .project:hover .project__description {
     opacity: 0.8;
     transform: translateY(0px);    
+}
+
+.project.invisible{
+    display: none;
 }
 
     
@@ -487,6 +498,29 @@ h1 {
     transform: scale(1.1);
     color:var(--color-orange)
 }
+
+.arrow-up{
+    position: fixed;
+    width: 70px;
+    height: 70px;
+    line-height: 50px;
+    bottom: 50px;
+    right: 50px;
+    font-size: 50px;
+    background-color:var(--color-dark-pink);
+    border-radius: 50%;
+    color:var(--color-white);
+    opacity: 0;
+    transition: opacity 300ms ease-in;
+    pointer-events: none;
+}
+
+.arrow-up.visible{
+    opacity: 1;
+    pointer-events: all;
+
+}
+
 
 
 /* for below 768px screen width */
