--- a/style.css
+++ b/style.css
@@ -125,10 +125,9 @@ h1 {
     margin: 0 4px;
     cursor: pointer;
     border-radius: var(--size-border-radius);
-
+    border : 1px solid transparent;
 }
 .navbar__menu__item.active{
-    border:1px solid var(--color-white);
     
 
 }
@@ -331,13 +330,13 @@ h1 {
     padding : 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover{
     background-color: var(--color-pink);
     color:var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count{
     opacity: 1;
     top:0;
@@ -363,7 +362,7 @@ h1 {
     flex-wrap: wrap;
     justify-content: center;
     opacity: 1;
-    transition: all var(--animation-duration) ease-in;
+    transition: all var(--animation-duration) ease-out;
 
 
 }
