--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ h1 {
     display: flex;
 }
 
+
+
 .navbar__menu__item{
     padding: 8px 12px;
     margin: 0 4px;
@@ -414,18 +416,18 @@ h1 {
 
 
 .project__description h3{
-    color:var(--color-white);
+    color:var(--color-orange);
 }
 
 .project__description h3:after{
     content: '';
-    width: 25px;
+    width: 50px;
     height: 2px;
     background-color:var(--color-dark-white);
     display: block;
     position: relative;
     left: 50%;
-    margin-left: -12px;
+    transform: translateX(-50%);
     margin-top: 8px;
 }
 
@@ -531,6 +533,7 @@ h1 {
     #navbar{
         flex-direction: column;
         align-items: flex-start;
+        background-color: var(--color-pink);
     }
 
     .navbar__menu{
@@ -538,6 +541,9 @@ h1 {
         text-align: center;
         width: 100%;
         display: none;
+    }
+    .navbar__menu.open{
+        display: block;
     }
     .about__majors{
         flex-direction: column;
